[tool.poetry]
name = "rrt-methods"
version = "0.1.0"
description = ""
authors = ["Arthur Stevenson <arthurcstevenson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
